# doubaoime-asr

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy-local.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
doubaoime_asr/: asr.py  config.py
examples/: concurrency_test.py  file_transcribe.py
samples/: README.md
